<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Club51</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_same_city_club">SameCityClubActivity</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_personal">PersonalActivity</string>
    <string name="title_activity_same_city_activity">SameCityActivityActivity</string>

    <!-- 同城俱乐部使用的字段 -->
    <string name="samecity_club_build">创建俱乐部</string>
    <string name="samecity_activity_title">详细信息</string>
    <string name="samecity_search">查询</string>
    <string name="title_activity_bulid_club">BulidClubActivity</string>
    <string name="title_activity_club_main_page">ClubMainPageActivity</string>
    <string name="activity_list_name">ClubListActivity</string>
    <string name="title_activity_invitation_detail">InvitationDetailActivity</string>
    <string name="title_activity_activity_details">ActivityDetailsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!-- 注册登录界面 -->
    <string name="phonenum">手机号</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="psw">密码</string>
    <string name="register">注册</string>
    <string name="forgetpwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="search_morecontent">搜索更多内容</string>
    <string name="friend_parts">朋友圈</string>
    <string name="message">消息</string>

    <!-- 探索界面 -->
    <string name="find_page_fragment_toptext">探索</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_myactivities">MyactivitiesActivity</string>
    <string name="title_activity_myfriends">MyfriendsActivity</string>
    <string name="title_activity_mybbs">MybbsActivity</string>
    <string name="title_activity_mystore">MystoreActivity</string>
    <string name="title_activity_myclubs">MyclubsActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_activity_enter_success">ActivityEnterSuccessActivity</string>

</resources>
