<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/im_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_break" />

        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textColor="@color/string_register"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.29"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center" 
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/liner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/register_writeframe"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="40dp" >

            <EditText
                android:id="@+id/et_phonenum"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/phonenum_psw_input_background"
                android:ems="10"
                android:hint="@string/phonenum"
                android:textColor="@color/registerpage_text_colors"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_psw"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/et_phonenum"
                android:layout_marginTop="10dp"
                android:background="@drawable/phonenum_psw_input_background"
                android:ems="10"
                android:hint="@string/psw"
                android:textColor="@color/registerpage_text_colors"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/et_psw"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_press_up"
                android:text="@string/login"
                android:textColor="@color/registerpage_text_register"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_forgetpwd"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/btn_login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/forgetpwd"
                android:textColor="@color/string_register"
                android:textSize="16sp" />
        </RelativeLayout>
        
         <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_qq" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_wechat" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_sina" />
    </LinearLayout>
        
    </LinearLayout>

    <!-- 第三方登录未实现 -->

   
</LinearLayout>